--- a/webroot/css/style4.css
+++ b/webroot/css/style4.css
@@ -3,6 +3,7 @@
 */
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+
 body {
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
@@ -253,4 +254,7 @@ a.article:hover {
     #sidebarCollapse span {
         display: none;
     }
+}
+.white, .white a {
+  color: #fff;
 }
